New layout, New Template
moved the account panel to the right and put the buttons for the home on
the left, also increased size chat for lobby

--- a/client/css/master.less
+++ b/client/css/master.less
@@ -5,6 +5,7 @@
 }
 
 .home_container {
+  height: 100%;
   padding-top: 20px;
 }
 
@@ -48,6 +49,7 @@
   border-radius: 15px 15px 15px 15px;
 
   padding: 8px;
+  margin-bottom: 20px;
   /*width: 100%;*/
   height: auto;
 
@@ -89,8 +91,6 @@
 }
 .chat_container {
   .leftPanelStyle();
-
-  margin-top: 20px;
   height: 100%;
   .chat_icon_circle_up {
     .svgIcons();
