--- a/client/css/master.less
+++ b/client/css/master.less
@@ -48,7 +48,6 @@
   background-color: rgb(245,245,245);
   border-radius: 15px 15px 15px 15px;
 
-  padding: 8px;
   margin-bottom: 20px;
   /*width: 100%;*/
   height: auto;
@@ -64,8 +63,9 @@
     }
     border-bottom: 1px solid rgb(@lowerbarAccent,@lowerbarAccent,@lowerbarAccent);
     border-radius: 15px 15px 0px 0px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 18px;
+    padding-right: 18px;
+    padding-top: 8px;
   }
 
   .body {
@@ -91,7 +91,52 @@
 }
 .chat_container {
   .leftPanelStyle();
-  height: 100%;
+  min-height: 50%;
+
+  .msg_input{
+    width: 100%;
+    margin-bottom: 0px;
+    margin-top: 2px
+  }
+
+  .body {
+    background-color: white;
+    padding-right: 8px;
+    padding-left: 8px;
+    margin-left: 2px;
+    margin-right: 2px;
+    height: 274px;
+    width: auto;
+    max-height: 274px;
+    overflow-y: hidden;
+    overflow-x: hidden;
+
+    .msg_spacer {
+      border-bottom: 3px dotted rgb(@lowerbarAccent,@lowerbarAccent,@lowerbarAccent);
+      width: 100%;
+      margin-top: 8px;
+      margin-bottom: 8px;
+    }
+
+    .msg_container {
+      width: 100%;
+      max-height: 100%;
+
+      .msg_header{
+        max-height: 18px;
+        span {
+          font-size: 12px;
+          border-bottom: 1px solid rgb(@lowerbarAccent,@lowerbarAccent,@lowerbarAccent);
+        }
+      }
+
+      .msg_body {
+        span {
+          font-size: 10px;
+        }
+      }
+    }
+  }
   .chat_icon_circle_up {
     .svgIcons();
     visibility: visible;
@@ -102,6 +147,14 @@
 
     position: relative;
     right: -15px;
+  }
+  .enter_button {
+    background-color: #1EAEDB;
+    color: #fff;
+    .u-noselect();
+    .u-pointer();
+    margin-top: 3px;
+    border-radius: 0px 0px 15px 15px;
   }
 }
 
@@ -157,6 +210,78 @@
 
 
 
+/*
+ __    __   _______     ___       _______   _______ .______      
+|  |  |  | |   ____|   /   \     |       \ |   ____||   _  \     
+|  |__|  | |  |__     /  ^  \    |  .--.  ||  |__   |  |_)  |    
+|   __   | |   __|   /  /_\  \   |  |  |  ||   __|  |      /     
+|  |  |  | |  |____ /  _____  \  |  '--'  ||  |____ |  |\  \----.
+|__|  |__| |_______/__/     \__\ |_______/ |_______|| _| `._____|*/
+
+.header_container {
+  width: 100%;
+  height: 3.5rem;
+
+  border-bottom: 1px solid rgb(230,230,230);
+  background-color: rgb(245,245,245);
+
+  position: absolute;
+  top: 0px;
+  left: 0px;
+
+  z-index: 100;
+}
+
+.header_title {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 20px;
+}
+
+.header_title h5{
+  margin-bottom: 0px;
+}
+
+.header_navigation {
+    margin-right: 20px;
+}
+
+.header_navigation h6 {
+  margin-bottom: 0px;
+}
+
+.navigation_divider {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.navigation_extender {
+  margin-right: 10px;
+
+  position: relative;
+  right: 0px;
+  z-index: 100;
+}
+
+.small_button {
+  height: auto;
+  padding: 0 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  line-height: auto;
+  font-size: 1.5rem;
+  text-transform: none;
+  margin-bottom: 0px;
+}
+
+
+
+
+
+
+
+
+
 .u-full-height {
   height: 100%;
 }
@@ -188,4 +313,112 @@
   -ms-user-select: none;       /* Internet Explorer/Edge */
   user-select: none;           /* Non-prefixed version, currently
                                   not supported by any browser */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*                     _ _ _                
+  ___  ___ _ __ ___ | | | |__   __ _ _ __ 
+ / __|/ __| '__/ _ \| | | '_ \ / _` | '__|
+ \__ \ (__| | | (_) | | | |_) | (_| | |   
+ |___/\___|_|  \___/|_|_|_.__/ \__,_|_|   */
+                                          
+
+.scrollable {
+  position: relative;
+}
+
+.scrollable:focus {
+  outline: 0;
+}
+
+.scrollable .viewport {
+  position: relative;
+  overflow: hidden;
+}
+
+.scrollable .viewport .overview {
+  position: absolute;
+}
+
+.scrollable .scroll-bar {
+  display: none;
+}
+
+.scrollable .scroll-bar.vertical {
+  position: absolute;
+  right: 0;
+  height: 100%;
+}
+
+.scrollable .scroll-bar.horizontal {
+  position: relative;
+  width: 100%;
+}
+
+.scrollable .scroll-bar .thumb {
+  position: absolute;
+}
+
+.scrollable .scroll-bar.vertical .thumb {
+  width: 100%;
+  min-height: 10px;
+}
+
+.scrollable .scroll-bar.horizontal .thumb {
+  height: 100%;
+  min-width: 10px;
+  left: 0;
+}
+
+.not-selectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/*Gray skin*/
+
+.scrollable.gray-skin {
+  padding-right: 17px;
+}
+
+.scrollable.gray-skin .scroll-bar {
+  border: 1px solid gray;
+  background-color: #d3d3d3;
+}
+
+.scrollable.gray-skin .scroll-bar .thumb {
+  background-color: gray;
+}
+
+.scrollable.gray-skin .scroll-bar:hover .thumb {
+  background-color: black;
+}
+
+.scrollable.gray-skin .scroll-bar.vertical {
+  width: 5px;
+}
+
+.scrollable.gray-skin .scroll-bar.horizontal {
+  height: 10px;
+  margin-top: 2px;
 }
